--- a/css/impress.css
+++ b/css/impress.css
@@ -99,9 +99,9 @@ a:hover {
 
 /* COMMON STEP STYLES */
 
-.step {
+step {
     width: 900px;
-    padding: 40px;
+    padding: 400px;
 
     -webkit-box-sizing: border-box;
     -moz-box-sizing:    border-box;
@@ -117,7 +117,7 @@ a:hover {
 
 /* fade out inactive slides */
 
-.step {
+step {
     -webkit-transition: opacity 1s;
     -moz-transition:    opacity 1s;
     -ms-transition:     opacity 1s;
@@ -125,8 +125,8 @@ a:hover {
     transition:         opacity 1s;
 }
 
-.step:not(.active) {
-    opacity: 0.3;
+step:not(.active) {
+    opacity: 0.1;
 }
 
 /* STEP SPECIFIC STYLES */
